; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_onion.c_send_onion_response.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_onion.c_send_onion_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ONION_RESPONSE_MAX_DATA_SIZE = common dso_local global i64 0, align 8
@RETURN_3 = common dso_local global i32 0, align 4
@NET_PACKET_ONION_RECV_3 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @send_onion_response(i32* %0, i32 %1, i32* %2, i64 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  %15 = load i64, i64* %10, align 8
  %16 = load i64, i64* @ONION_RESPONSE_MAX_DATA_SIZE, align 8
  %17 = icmp sgt i64 %15, %16
  br i1 %17, label %21, label %18

18:                                               ; preds = %5
  %19 = load i64, i64* %10, align 8
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %18, %5
  store i32 -1, i32* %6, align 4
  br label %57

22:                                               ; preds = %18
  %23 = load i32, i32* @RETURN_3, align 4
  %24 = add nsw i32 1, %23
  %25 = sext i32 %24 to i64
  %26 = load i64, i64* %10, align 8
  %27 = add nsw i64 %25, %26
  %28 = call i8* @llvm.stacksave()
  store i8* %28, i8** %12, align 8
  %29 = alloca i32, i64 %27, align 16
  store i64 %27, i64* %13, align 8
  %30 = load i32, i32* @NET_PACKET_ONION_RECV_3, align 4
  %31 = getelementptr inbounds i32, i32* %29, i64 0
  store i32 %30, i32* %31, align 16
  %32 = getelementptr inbounds i32, i32* %29, i64 1
  %33 = load i32*, i32** %11, align 8
  %34 = load i32, i32* @RETURN_3, align 4
  %35 = sext i32 %34 to i64
  %36 = call i32 @memcpy(i32* %32, i32* %33, i64 %35)
  %37 = getelementptr inbounds i32, i32* %29, i64 1
  %38 = load i32, i32* @RETURN_3, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32*, i32** %9, align 8
  %42 = load i64, i64* %10, align 8
  %43 = call i32 @memcpy(i32* %40, i32* %41, i64 %42)
  %44 = load i32*, i32** %7, align 8
  %45 = load i32, i32* %8, align 4
  %46 = mul nuw i64 4, %27
  %47 = trunc i64 %46 to i32
  %48 = call i64 @sendpacket(i32* %44, i32 %45, i32* %29, i32 %47)
  %49 = trunc i64 %48 to i32
  %50 = sext i32 %49 to i64
  %51 = mul nuw i64 4, %27
  %52 = icmp ne i64 %50, %51
  br i1 %52, label %53, label %54

53:                                               ; preds = %22
  store i32 -1, i32* %6, align 4
  store i32 1, i32* %14, align 4
  br label %55

54:                                               ; preds = %22
  store i32 0, i32* %6, align 4
  store i32 1, i32* %14, align 4
  br label %55

55:                                               ; preds = %54, %53
  %56 = load i8*, i8** %12, align 8
  call void @llvm.stackrestore(i8* %56)
  br label %57

57:                                               ; preds = %55, %21
  %58 = load i32, i32* %6, align 4
  ret i32 %58
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #2

declare dso_local i64 @sendpacket(i32*, i32, i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
